fixed the errors: cast in long, int <--> double, percent and limit's name, year <--> month differences

--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.mvc.format.date=yyyy-MM-dd
 spring.profiles.active=smart
 
-hr.employee.special.percent10=10
-hr.employee.special.percent5=5
-hr.employee.special.percent2=2
-hr.employee.special.percent0=0
+hr.employee.special.percentVeryGood=10
+hr.employee.special.percentGood=5
+hr.employee.special.percentAvarage=2
+hr.employee.special.percentNothing=0
 
-hr.employee.special.limit10=10
-hr.employee.special.limit5=5
-hr.employee.special.limit2=2.5
+hr.employee.special.limitVeryGood=120
+hr.employee.special.limitGood=60
+hr.employee.special.limitAvarage=30
