--- a/hr/pom.xml
+++ b/hr/pom.xml
@@ -15,6 +15,8 @@
 	<description>HR application</description>
 	<properties>
 		<java.version>11</java.version>
+		 <maven.compiler.source>3.2</maven.compiler.source>
+ 		 <maven.compiler.target>3.2</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -26,6 +28,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
