2nd homework. The plus is missing, working on it :)

--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+
 spring.profiles.active=smart
+
+server.port=8081
 
 hr.employee.special.percentVeryGood=10
 hr.employee.special.percentGood=5
