--- a/hr/pom.xml
+++ b/hr/pom.xml
@@ -15,15 +15,22 @@
 	<description>HR application</description>
 	<properties>
 		<java.version>11</java.version>
-		 <maven.compiler.source>3.2</maven.compiler.source>
- 		 <maven.compiler.target>3.2</maven.compiler.target>
+		 <maven.compiler.source>1.8</maven.compiler.source>
+ 		 <maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
