MinSalary method almost works

--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.profiles.active=smart
 
 server.port=8081
 
+spring.thymeleaf.cache=false
+
 hr.employee.special.percentVeryGood=10
 hr.employee.special.percentGood=5
 hr.employee.special.percentAvarage=2
