--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.port=8081
 
 spring.thymeleaf.cache=false
 
+server.error.include-message=always
+
 hr.employee.special.percentVeryGood=10
 hr.employee.special.percentGood=5
 hr.employee.special.percentAvarage=2
