--- a/hr/pom.xml
+++ b/hr/pom.xml
@@ -57,6 +57,12 @@
         <artifactId>mapstruct</artifactId>
         <version>${org.mapstruct.version}</version>
     </dependency>
+    
+    <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+			<scope>test</scope>
+	</dependency>
 		
 	</dependencies>
 
