--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -16,3 +16,11 @@ hr.employee.special.percentNothing=0
 hr.employee.special.limitVeryGood=120
 hr.employee.special.limitGood=60
 hr.employee.special.limitAvarage=30
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/webuni
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
