fix the constructor error and the modify method

--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -17,7 +17,7 @@ hr.employee.special.limitVeryGood=120
 hr.employee.special.limitGood=60
 hr.employee.special.limitAvarage=30
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/webuni
+spring.datasource.url=jdbc:postgresql://localhost:5432/hr
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
