--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
