--- a/hr/pom.xml
+++ b/hr/pom.xml
@@ -74,6 +74,12 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 	</dependency>
+	
+	<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-jpamodelgen</artifactId>
+    <version>5.4.30.Final</version>
+	</dependency>
 		
 	</dependencies>
 
