--- a/hr/pom.xml
+++ b/hr/pom.xml
@@ -28,6 +28,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -101,6 +107,12 @@
                         <version>${org.mapstruct.version}</version>
                     </path>
                     <!-- other annotation processors -->
+                    <path>
+						<groupId>org.hibernate</groupId>
+						<artifactId>hibernate-jpamodelgen</artifactId>
+						<version>5.4.30.Final</version>
+					</path>
+                  
                 </annotationProcessorPaths>
             </configuration>
         </plugin>
