--- a/hr/src/main/resources/application.properties
+++ b/hr/src/main/resources/application.properties
@@ -24,4 +24,6 @@ spring.datasource.password=admin
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.open-in-view=true
+spring.jpa.open-in-view=false
+
+logging.level.org.springframework.security=debug
